...
        android:layout_width="@dimen/dp_445"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_18"
        android:gravity="center"
        android:minHeight="@dimen/dp_90"
        android:paddingHorizontal="@dimen/dp_40"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="1234567890" />

...
    <TextView
        android:id="@+id/button_one"
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <View
...
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:text="2"
        app:layout_constraintBottom_toBottomOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toTopOf="@id/button_one" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
        android:layout_height="@dimen/pin_lock_line_height"
...
    <TextView
        android:id="@+id/button_four"
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:text="4"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_one" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
...
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toTopOf="@id/button_four" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
        android:layout_height="@dimen/pin_lock_line_height"
...
        android:id="@+id/button_seven"
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:text="7"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
...
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:text="8"
        app:layout_constraintBottom_toBottomOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toTopOf="@id/button_seven" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
        android:layout_height="@dimen/pin_lock_line_height"
...
        style="@style/LockCircleButton"
        android:layout_width="@dimen/pin_lock_icon_size"
        android:layout_height="@dimen/pin_lock_icon_size"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_enter"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintTop_toTopOf="@id/button_delete" />

    <View
        android:layout_width="@dimen/pin_lock_line_width"
        android:layout_height="@dimen/pin_lock_line_height"
...
