...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vaxcare.vaxhub.core.view.VaxToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:right_icon1="@drawable/ic_system_filter"
        app:right_icon2="@drawable/ic_refresh"
        app:title="@string/patient_select_patient" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_lookup"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_74"
        android:src="@drawable/ic_search"
...
        app:maxImageSize="@dimen/dp_64"
        app:rippleColor="@color/primary_white"
        app:tint="@color/primary_white"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_25"
        android:src="@drawable/ic_plus"
...
        app:maxImageSize="@dimen/dp_64"
        app:rippleColor="@color/primary_white"
        app:tint="@color/primary_white"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <LinearLayout
            android:id="@+id/calendar_item_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_96"
            android:layout_marginStart="@dimen/dp_21"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/calendar_icon"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    app:layout_constraintEnd_toEndOf="@id/calendar_icon"
                    app:layout_constraintStart_toStartOf="@id/calendar_icon"
                    tools:text="12" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/date_time"
                style="@style/H6RegBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/calendar_icon"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            tools:visibility="visible">

            <com.vaxcare.vaxhub.core.view.calendar.CalendarPicker
                android:id="@+id/calendar_picker"
                android:layout_width="@dimen/dp_568"
                android:layout_height="@dimen/dp_526" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
...
