...
    android:background="@drawable/bg_rounded_corner_white_20"
    tools:ignore="HardcodedText"
    tools:layout_height="@dimen/dp_568"
    tools:layout_width="@dimen/dp_526">

    <TextView
        android:id="@+id/current_month"
        style="@style/H6BoldBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="July 2020" />

    <ImageView
        android:id="@+id/navigate_back"
        android:layout_width="@dimen/dp_42"
        android:layout_height="@dimen/dp_42"
        android:layout_marginStart="@dimen/dp_48"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_navigate_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_month" />

    <ImageView
        android:id="@+id/navigate_forward"
        android:layout_width="@dimen/dp_42"
        android:layout_height="@dimen/dp_42"
        android:layout_marginEnd="@dimen/dp_48"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_navigate_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_month" />

    <TextView
        android:id="@+id/sunday"
        style="@style/BodySmlBoldBlack"
        android:layout_width="@dimen/dp_42"
        android:layout_height="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_49"
        android:gravity="center"
        android:text="S"
        app:layout_constraintEnd_toStartOf="@id/monday"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/navigate_back"
        app:layout_constraintTop_toBottomOf="@id/current_month" />

    <TextView
        android:id="@+id/monday"
...
        android:text="S"
        app:layout_constraintEnd_toEndOf="@id/navigate_forward"
        app:layout_constraintStart_toEndOf="@id/friday"
        app:layout_constraintTop_toTopOf="@id/sunday" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_month"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_42"
        android:layout_marginBottom="@dimen/dp_35"
...
