...
  * Copyright VaxCare (c) 2020.                                                                   *
  ***********************************************************************************************-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_white"
    android:paddingTop="@dimen/dp_42"
    android:paddingBottom="@dimen/dp_25">

    <ImageView
        android:id="@+id/toolbar_icon"
        android:layout_width="@dimen/dp_55"
        android:layout_height="@dimen/dp_55"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_48"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/dp_5"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_icon"
        app:layout_constraintEnd_toStartOf="@id/right_icon1"
        app:layout_constraintStart_toEndOf="@id/toolbar_icon"
        app:layout_constraintTop_toTopOf="@id/toolbar_icon">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_4"
            android:text="@string/admin_fragment_header_vaxcare_admin_login"
            app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_28"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/dp_5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_icon"
        app:layout_constraintEnd_toStartOf="@id/right_icon2"
        app:layout_constraintTop_toTopOf="@id/toolbar_icon"
        tools:src="@drawable/ic_kebab_menu"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/right_icon2"
...
